--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,14 +1,13 @@
-<div class="breadcrumbs">
-    <div class="col-sm-4">
-        <div class="page-header float-left">
-            <div class="page-title">
-                <h1 ng-show="!show_edit_input">โครงการ {{ name || 'ไม่ถูกกำหนด' }} </h1>
+ <!-- Header-->
+ <header id="header" class="header">
+    <div class="header-menu">
+        <div class="col-sm-8">
+            <div class="page-header float-left">
+                    <h1>โครงการ {{ name || 'ไม่ถูกกำหนด' }} </h1>
             </div>
         </div>
-        
     </div>
-    
-</div>
+</header><!-- /header -->
 
 <div class="content mt-3">
     <div class="col-md-12">
