--- a/public/html/sub_project.html
+++ b/public/html/sub_project.html
@@ -1,18 +1,19 @@
-<div class="breadcrumbs">
-    <div class="col-sm-4">
-        <div class="page-header float-left">
-            <div class="page-title">
-                <h1>{{ name }}</h1>
+ <!-- Header-->
+ <header id="header" class="header">
+        
+    <div class="header-menu">
+
+        <div class="col-sm-8">
+            <div class="page-header float-left">
+                    <h1> {{ name }} </h1>  
             </div>
         </div>
-        
-    </div>
-    <div class="col-sm-8">
-        <div class="page-header float-right">
-            <button type="button" class="btn btn-info" style="margin-top: 20px;" data-toggle="modal" data-target="#myModal">เพิ่ม</button>
+        <div class=" page-header float-right">
+                <button type="button" class="btn btn-info" style="margin-top: 10px;" data-toggle="modal" data-target="#myModal">เพิ่ม</button>
         </div>
     </div>
-</div>
+
+</header>
 
 <div class="content mt-3">
     <div class="col-md-12">
