add name and change header

--- a/public/html/project.html
+++ b/public/html/project.html
@@ -4,7 +4,7 @@
     <div class="header-menu">
 
         <div class="col-sm-8">
-            <div class="page-header float-left">
+            <div class="page-header float-left" style="width: 100% !important;">
                     <h1 ng-show="!show_edit_input">โครงการ {{ name || 'ไม่ถูกกำหนด' }} </h1>
                     <div class="input-group" ng-show="show_edit_input" style="margin-top: 10px; margin-bottom: 10px;">
                         <input type="text" class="form-control" placeholder="ขื่อโครงการ..." ng-model="name" />
