--- a/public/html/summary.html
+++ b/public/html/summary.html
@@ -3,7 +3,7 @@
     <div class="header-menu">
         <div class="col-sm-8">
             <div class="page-header float-left">
-                    <h1> สรุปผลโครงการ </h1>
+                    <h1> สรุปผลโครงการ {{ name || '' }} </h1>
             </div>
         </div>
     </div>
