--- a/public/html/project.html
+++ b/public/html/project.html
@@ -28,7 +28,7 @@
     <div class="col-md-12">
         <div class="form-group">
             <label class="control-label mb-1">งบประมาณโครงการทั้งหมด</label>
-            <input type="number" class="form-control" ng-model="budget_all"/>
+            <input type="number" class="form-control" ng-model="budget_all" ng-disabled="true"/>
         </div>
     </div>
     <div class="col-md-12">
