--- a/public/html/project.html
+++ b/public/html/project.html
@@ -145,6 +145,9 @@
         <div class="card">
             <div class="card-header">
                 <strong class="card-title">ค่าใช้จ่ายมหาวิทยาลัย</strong>
+                <div class="float-right">
+                        <button type="button" class="btn btn-info" ng-click="open_university_budget_modal()"  data-toggle="modal" data-target="#university_budget_modal">เเก้ไข</button>
+                    </div>
             </div>
             <div class="card-body">
                 <table class="table table-striped">
@@ -160,20 +163,20 @@
                     <tr>
                         <th scope="row">1</th>
                         <td>มหาวิทยาลัย</td>
-                        <td>10</td>
-                        <td>{{ u_vate = budget_all * 0.1 }}</td>
+                        <td>{{ u_percent_budget * 100 }}</td>
+                        <td>{{ u_vate = budget_all * u_percent_budget }}</td>
                     </tr>
                     <tr>
                         <th scope="row">2</th>
                         <td>คณะ</td>
-                        <td>2</td>
-                        <td>{{ f_vate = budget_all * 0.02 }}</td>
+                        <td>{{ f_percent_budget * 100 }}</td>
+                        <td>{{ f_vate = budget_all * f_percent_budget }}</td>
                     </tr>
                     <tr>
                     <th scope="row">3</th>
                         <td>ภาค</td>
-                        <td>1</td>
-                        <td>{{ d_vate = budget_all * 0.01 }}</td>
+                        <td>{{ d_percent_budget * 100 }}</td>
+                        <td>{{ d_vate = budget_all * d_percent_budget }}</td>
                     </tr>
                 </tbody>
                 <tfoot>
@@ -248,6 +251,43 @@
     </div>
 </div>
 
+<!-- Modal -->
+<div class="modal fade" id="university_budget_modal" role="dialog">
+        <div class="modal-dialog">
+        
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">ร้อยละค่าใช้จ่ายมหาวิทยาลัย</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label class="control-label mb-1">ร้อยละค่าใช้จ่ายมหาวิทยาลัย</label>
+                            <input type="number" class="form-control" ng-model="u_percent_budget_clone"/>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label class="control-label mb-1">ร้อยละค่าใช้จ่ายคณะ</label>
+                            <input type="number" class="form-control" ng-model="f_percent_budget_clone"/>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label class="control-label mb-1">ร้อยละค่าใช้จ่ายภาค</label>
+                            <input type="number" class="form-control" ng-model="d_percent_budget_clone"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" ng-disabled="!validate_university_budget()" data-dismiss="modal" ng-click="update_university_budget()">อัพเดท</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">ปิด</button>
+                </div>
+            </div>
+            
+        </div>
+    </div>
 
 <!-- Modal -->
 <div class="modal fade" id="staff" role="dialog">
