change number to price in summary page

--- a/public/html/summary.html
+++ b/public/html/summary.html
@@ -40,8 +40,8 @@
                         <th scope="row"> <input type="checkbox" ng-change="on_selected_activity_changed()" ng-model="activity.selected"> </th>
                         <td>{{ activity.name }}</td>
                         <td>กิจกรรมเดือน {{ activity.start }} - {{ activity.end }}</td>
-                        <td>{{ activity.budget }}</td>
-                        <td>{{ activity.disburse }}</td>
+                        <td>{{ numberWithCommas(activity.budget) }}</td>
+                        <td>{{ numberWithCommas(activity.disburse) }}</td>
                         <td>{{ (activity.disburse * 100 ) / activity.budget  }}</td>
                     </tr>
 
@@ -51,8 +51,8 @@
                         <th scope="row">รวม</th>
                         <td></td>
                         <td>{{ last_month }}</td>
-                        <td>{{ a_all = used_budget }}</td>
-                        <td>{{ used_disburse }}</td>
+                        <td>{{ numberWithCommas(a_all = used_budget) }}</td>
+                        <td>{{ numberWithCommas(used_disburse) }}</td>
                         <td>{{ percent.toFixed(2) }}</td>
                     </tr>
                 <tfoot>
@@ -87,8 +87,8 @@
                     <th scope="row"><input type="checkbox" ng-change="on_selected_staff_changed()" ng-model="staff.selected"/></th>
                     <td>{{ staff.position }}</td>
                     <td>{{ staff.fullname }}</td>
-                    <td>{{ staff.salary  }}</td>
-                    <td>{{  staff.salary * last_month }}</td>
+                    <td>{{ numberWithCommas(staff.salary)  }}</td>
+                    <td>{{  numberWithCommas(staff.salary * last_month) }}</td>
                     <td>{{  ((staff.salary * last_month) * 100 / budget_all ).toFixed(2) }}</td>
                 </tr>
             </tbody>
@@ -97,8 +97,8 @@
                     <th scope="row">รวม</th>
                     <td></td>
                     <td></td>
-                    <td>{{ all_salary }}</td>
-                    <td>{{ s_all = all_salary * last_month }}</td>
+                    <td>{{ numberWithCommas(all_salary) }}</td>
+                    <td>{{ numberWithCommas(s_all = all_salary * last_month) }}</td>
                     <td>{{ ((s_all) * 100 / budget_all ).toFixed(2) }}</td>
                 </tr>
             <tfoot>
@@ -131,19 +131,19 @@
                     <th scope="row"> <input type="checkbox" ng-model="university_selected" ng-change="sub_organize_change()"> </th>
                     <td>มหาวิทยาลัย</td>
                     <td>{{ u_percent_budget * 100 }}</td>
-                    <td>{{ budget_all * u_percent_budget }}</td>
+                    <td>{{ numberWithCommas(u_vate = budget_all * u_percent_budget) }}</td>
                 </tr>
                 <tr>
                     <th scope="row"> <input type="checkbox" ng-model="factory_selected" ng-change="sub_organize_change()"> </th>
                     <td>คณะ</td>
                     <td>{{ f_percent_budget * 100 }}</td>
-                    <td>{{ budget_all * f_percent_budget }}</td>
+                    <td>{{ numberWithCommas(f_vate = budget_all * f_percent_budget) }}</td>
                 </tr>
                 <tr>
                 <th scope="row"><input type="checkbox" ng-model="department_selected" ng-change="sub_organize_change()"></th>
                     <td>ภาค</td>
                     <td>{{ d_percent_budget * 100 }}</td>
-                    <td>{{ budget_all * d_percent_budget }}</td>
+                    <td>{{ numberWithCommas(d_vate = budget_all * d_percent_budget) }}</td>
                 </tr>
             </tbody>
             <tfoot>
@@ -151,7 +151,7 @@
                     <th scope="row">รวม</th>
                     <td></td>
                     <td>{{ (u_percent_budget + f_percent_budget + d_percent_budget) * 100 }}</td>
-                    <td>{{ u_vate + f_vate + d_vate }}</td>
+                    <td>{{ numberWithCommas(u_vate + f_vate + d_vate) }}</td>
                 </tr>
             <tfoot>
             </table>
