--- a/public/html/sub_project.html
+++ b/public/html/sub_project.html
@@ -53,8 +53,8 @@
                         <th scope="row">{{ $index + 1 }}</th>
                         <td>{{ activity.date }}</td>
                         <td>{{ activity.name }}</td>
-                        <td>{{ activity.expect_price || 0 }}</td>
-                        <td>{{ activity.price }}</td>
+                        <td>{{ numberWithCommas(activity.expect_price || 0) }}</td>
+                        <td>{{ numberWithCommas(activity.price) }}</td>
                         <td>{{ activity.condition }}</td>
                         <td><button type="button" class="btn btn-warning" ng-click="del_activity(activity.key)" >ลบ</button></td>
                     </tr>
@@ -64,8 +64,8 @@
                         <th scope="row">รวม</th>
                         <td></td>
                         <td></td>
-                        <td>{{ get_sum_expect_price() }}</td>
-                        <td>{{ sum_price }}</td>
+                        <td>{{ numberWithCommas(get_sum_expect_price()) }}</td>
+                        <td>{{ numberWithCommas(sum_price) }}</td>
                         <td></td>
                         <td></td>
                     </tr>
